--- a/webappflask/templates/about.html
+++ b/webappflask/templates/about.html
@@ -9,9 +9,11 @@ About
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="about-box">
-          <h2>About us</h2>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages andIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many</p>
-          <a href="Javascript:void(0)">Read more</a>
+          <h2>Our Vision</h2>
+          <p>A world without animal farms and slaughterhouses. A world where food production does not decimate forests, pollute rivers and oceans, exacerbate climate change and drive wild animal populations to extinction.</p>
+          <h2>Our Mission</h2>
+          <p>Our mission is to inspire and support people to try vegan, drive corporate change, and create a global mass movement championing compassionate food choices with the aim of ending animal farming, protecting the planet, and improving human health.</p>
+<!--          <a href="Javascript:void(0)">Read more</a>-->
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 padding_rl">
